[project]
name = "skillner"
version = "2.0.dev"
requires-python = ">=3.9"


[project.optional-dependencies]
dev = [
    "black",
    "skillner[test]",
    "skillner[doc]",
]

test = [
    "pytest",
    "flake8",
    "pydocstyle"
]

doc = [
    "sphinx",
    "numpydoc",
    "sphinx_copybutton",
    "furo"
]
