[project]
name = "skillner"
version = "2.0.dev"
requires-python = ">=3.9"
description = "A smart rule based NLP module to extract skills from text"
authors = [
    {name = "Badr MOUFAD", email = "badr.moufad@emines.um6p.ma"},
    {name = "Anas AIT AOMAR", email = "anas.aitaomar@emines.um6p.ma"},
]
keywords = ["NLP", "skills", "skills-extraction", "skillner", "python"]
license = {text = "MIT License"}
readme = {file = ["README.md"], content-type = "text/markdown"}
classifiers = [
    "Topic :: Text Processing",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://skillner.vercel.app"
documentation = "https://anasaito.github.io/SkillNER"
repository = "https://github.com/AnasAito/SkillNER.git"


[project.optional-dependencies]
dev = [
    "black",
    "skillner[test]",
    "skillner[doc]",
]

test = [
    "pytest",
    "flake8",
    "pydocstyle"
]

doc = [
    "sphinx",
    "numpydoc",
    "sphinx_copybutton",
    "furo"
]
